--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <body> Hello Github ! </body>
-  </head>
+<head>
+<style>
+  body { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; margin: 0; background-color: #f0f0f0; font-family: sans-serif; }
+  
+  /* L'animation du ballon */
+  .ball { width: 30px; height: 30px; background: white; border: 2px solid black; border-radius: 50%; position: relative;
+          animation: bounce 0.6s infinite alternate ease-in; }
+  
+  /* Le bonhomme (Stickman simplifié) */
+  .stickman { width: 2px; height: 50px; background: black; position: relative; }
+  .head { width: 20px; height: 20px; border: 2px solid black; border-radius: 50%; position: absolute; top: -25px; left: -10px; }
+  
+  @keyframes bounce {
+    from { transform: translateY(0); }
+    to { transform: translateY(-80px); }
+  }
+</style>
+</head>
+<body>
+  <h1>Mon Stickman Jongleur</h1>
+  <div class="ball"></div>
+  <div class="stickman">
+    <div class="head"></div>
+  </div>
+  <p>Animation créée en HTML/CSS pur</p>
+</body>
 </html>
