--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   body { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; margin: 0; background-color: #f0f0f0; font-family: sans-serif; }
   
   /* L'animation du ballon */
-  .ball { width: 30px; height: 30px; background: white; border: 2px solid black; border-radius: 50%; position: relative;
+  .ball { width: 30px; height: 30px; background: red; border: 2px solid black; border-radius: 50%; position: relative;
           animation: bounce 0.6s infinite alternate ease-in; }
   
   /* Le bonhomme (Stickman simplifié) */
